Opened 4 years ago
Closed 4 years ago
#16524 closed bug (fixed)
[input_server] doesn't read mouse focus settings on start (regression)
Reported by: | kim1963 | Owned by: | PreetpalKaur |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Preferences/Input | Version: | R1/beta2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
hrev54551 broke reading mouse focus behaviour settings.
Change History (6)
comment:1 by , 4 years ago
Component: | - General → Preferences/Input |
---|---|
Description: | modified (diff) |
Owner: | changed from | to
comment:2 by , 4 years ago
Description: | modified (diff) |
---|---|
Milestone: | Unscheduled → R1/beta3 |
Summary: | In revision 54551, saving the mouse focus behavior settings to the settings file is broken. → [input_server] doesn't read mouse focus settings on start (regression) |
comment:3 by , 4 years ago
comment:4 by , 4 years ago
Ok, after discussing this on Telegram it seems the new ticket title is a bit misleading.
Input_server side of things is working fine. But, the input preferences menu is not set according to the current setting when opening the window. I'll check why.
comment:5 by , 4 years ago
Fixed in https://review.haiku-os.org/c/haiku/+/3796 (waiting for review)
Note:
See TracTickets
for help on using tickets.
I can't reproduce this.
Here is what I do:
I tried this both with one and two devices connected (internal trackpoint + USB mouse).
Can anyone reproduce? If so, clean install or maybe do you have old settings files from previous version of the mouse preferences?