Input preferences: fix selection of focus mode

- Replace the popup menu with a BOptionPopUp to simplify the code
- Remove an unused menu to select "warp mode"
- The focus mode is not stored in the mouse settings file
  (config/settings_Mouse_settings), it is in another file
  (config/settings/system/app_server/mouse). This file is not read or
  written directly by mouse preferences, but we get the settings by
  asking app_server. However, the code to get these was missing in one
  place, resulting in these settings not being correctly initialized.

Fixes #16524

Change-Id: Ia1efc235c9d1a5408e3c6abc2526da7a0a639fa4
Reviewed-on: https://review.haiku-os.org/c/haiku/+/3796
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>